<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/panel_stroke"
    android:columnCount="4"
    android:orientation="horizontal"
    android:rowCount="4">

    <Button
        android:id="@+id/btnSon"
        android:layout_width="85dp"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_margin="0dp"
        android:background="@color/panel"
        android:drawableStart="@drawable/child"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:paddingStart="4dp"
        android:paddingLeft="0dp"
        android:paddingTop="4dp"
        android:paddingEnd="4dp"
        android:paddingRight="0dp"
        android:paddingBottom="4dp"
        android:text="@string/child"
        android:textSize="8sp" />

    <Button
        android:id="@+id/btnUpBrother"
        android:layout_width="91dp"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_margin="0dp"
        android:background="@color/panel"
        android:drawableStart="@drawable/up"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:paddingStart="4dp"
        android:paddingLeft="0dp"
        android:paddingTop="4dp"
        android:paddingEnd="4dp"
        android:paddingRight="0dp"
        android:paddingBottom="4dp"
        android:text="@string/add_up"
        android:textSize="8sp" />

    <Button
        android:id="@+id/btnDownBrother"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="2"
        android:layout_margin="0dp"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:paddingStart="4dp"
        android:paddingLeft="0dp"
        android:paddingTop="4dp"
        android:paddingEnd="4dp"
        android:paddingRight="0dp"
        android:paddingBottom="4dp"
        android:text="@string/add_down"
        android:textSize="8sp"
        android:background="@color/panel"
        android:drawableStart="@drawable/down"/>

    <Button
        android:id="@+id/btnDel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="3"
        android:layout_margin="0dp"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:paddingStart="4dp"
        android:paddingLeft="0dp"
        android:paddingTop="4dp"
        android:paddingEnd="4dp"
        android:paddingRight="0dp"
        android:paddingBottom="4dp"
        android:text="@string/del"
        android:textSize="8sp"
        android:background="@color/panel"
        android:drawableStart="@drawable/delete"/>

    <Button
        android:id="@+id/btnLeftSon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_margin="0dp"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:paddingStart="4dp"
        android:paddingLeft="0dp"
        android:paddingTop="4dp"
        android:paddingEnd="4dp"
        android:paddingRight="0dp"
        android:paddingBottom="4dp"
        android:text="@string/left_child"
        android:textSize="8sp"
        android:background="@color/panel"
        android:drawableStart="@drawable/left"/>

    <Button
        android:id="@+id/btnRightSon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_margin="0dp"
        android:background="@color/panel"
        android:drawableStart="@drawable/right"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:paddingStart="4dp"
        android:paddingLeft="0dp"
        android:paddingTop="4dp"
        android:paddingEnd="4dp"
        android:paddingRight="0dp"
        android:paddingBottom="4dp"
        android:text="@string/right_child"
        android:textSize="8sp" />

    <Button
        android:id="@+id/btnEditMainText"
        android:layout_width="84dp"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_margin="0dp"
        android:background="@color/panel"
        android:drawableStart="@drawable/edit_text"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:paddingStart="4dp"
        android:paddingLeft="0dp"
        android:paddingTop="4dp"
        android:paddingEnd="4dp"
        android:paddingRight="0dp"
        android:paddingBottom="4dp"
        android:text="@string/edit"
        android:textSize="8sp" />

    <Button
        android:id="@+id/btnEditAttachedText"
        android:layout_width="91dp"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_margin="0dp"
        android:background="@color/panel"
        android:drawableStart="@drawable/add_text"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:paddingStart="4dp"
        android:paddingLeft="0dp"
        android:paddingTop="4dp"
        android:paddingEnd="4dp"
        android:paddingRight="0dp"
        android:paddingBottom="4dp"
        android:text="@string/note"
        android:textSize="8sp" />

    <Button
        android:id="@+id/btnStyle"
        android:layout_width="82dp"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="2"
        android:layout_margin="0dp"
        android:background="@color/panel"
        android:drawableStart="@drawable/style"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:paddingStart="4dp"
        android:paddingLeft="0dp"
        android:paddingTop="4dp"
        android:paddingEnd="4dp"
        android:paddingRight="0dp"
        android:paddingBottom="4dp"
        android:text="@string/style"
        android:textSize="8sp" />

    <Button
        android:id="@+id/btnCopy"
        android:layout_width="84dp"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_margin="0dp"
        android:background="@color/panel"
        android:drawableStart="@drawable/copy"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:paddingStart="4dp"
        android:paddingLeft="0dp"
        android:paddingTop="4dp"
        android:paddingEnd="4dp"
        android:paddingRight="0dp"
        android:paddingBottom="4dp"
        android:text="@string/copy"
        android:textSize="8sp" />

    <Button
        android:id="@+id/btnPast"
        android:layout_width="91dp"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_margin="0dp"
        android:background="@color/panel"
        android:drawableStart="@drawable/paste"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:paddingStart="4dp"
        android:paddingLeft="0dp"
        android:paddingTop="4dp"
        android:paddingEnd="4dp"
        android:paddingRight="0dp"
        android:paddingBottom="4dp"
        android:text="@string/paste"
        android:textSize="8sp" />

    <Button
        android:id="@+id/btnCut"
        android:layout_width="82dp"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="2"
        android:layout_margin="0dp"
        android:background="@color/panel"
        android:drawableStart="@drawable/cut"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:paddingStart="4dp"
        android:paddingLeft="0dp"
        android:paddingTop="4dp"
        android:paddingEnd="4dp"
        android:paddingRight="0dp"
        android:paddingBottom="4dp"
        android:text="@string/cut"
        android:textSize="8sp" />

</GridLayout>